# app-framework

./: .gitignore  Cargo.toml  README.md  metadata.json
api/: async-app:template.os-v0.wit
async-receiver-a/: Cargo.toml
async-receiver-a/src/: kino_local_handlers.rs  lib.rs
async-receiver-b/: Cargo.toml
async-receiver-b/src/: kino_local_handlers.rs  lib.rs
async-receiver-c/: Cargo.toml
async-receiver-c/src/: kino_local_handlers.rs  kino_remote_handlers.rs  lib.rs  structs.rs
async-requester/: Cargo.toml
async-requester/src/: helpers.rs  lib.rs  structs.rs
crates/kinode_app_common/: Cargo.toml
crates/kinode_app_common/src/: lib.rs
crates/proc_macro_send/: Cargo.toml
crates/proc_macro_send/src/: lib.rs
lib/shared/: Cargo.toml
lib/shared/src/: lib.rs
pkg/: manifest.json  scripts.json
src/: lib.rs
