[package]
name = "kinode-app-framework"
version = "0.1.0"
edition = "2021"
authors = ["drfrmr <ben@kinode.org>"]

[dependencies]
anyhow = "1.0"
kinode_process_lib = "0.9.6"
process_macros = { git = "https://github.com/kinode-dao/process_macros.git", branch = "master" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wit-bindgen = "0.24.0"
