[package]
name = "kinode-app-framework"
version = "0.1.0"
edition = "2021"
authors = ["dr-frmr <ben@kinode.org>"]

[dependencies]
anyhow = "1.0"
kinode_process_lib = { git = "https://github.com/kinode-dao/process_lib", rev = "81d6c64" }
process_macros = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wit-bindgen = "0.24.0"
