[package]
name = "async-receiver-c"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0"
kinode_process_lib = { version = "0.10.2", features = ["logging"] }
process_macros = "0.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wit-bindgen = "0.36.0"
once_cell = "1.20.2"
uuid = { version = "1.0", features = ["v4"] }
kinode_app_common = { path = "../crates/kinode_app_common" }
proc_macro_send = { path = "../crates/proc_macro_send" }
shared = { path = "../lib/shared" }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "kinode:process"

