[package]
name = "kinode_app_common"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0"
kinode_process_lib = { version = "0.10.2", features = ["logging"] }
process_macros = "0.1.0"
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
wit-bindgen = "0.36.0"
once_cell = "1.20.2"
paste = "1.0"
uuid = { version = "1.0", features = ["v4"] }

[lib]
crate-type = ["lib"]

