[package]
name = "proc_macro_send"
version = "0.1.0"
edition = "2021"

[dependencies]
syn = "2.0"
quote = "1"
proc-macro2 = "1"
anyhow = "1"
kinode_app_common = { path = "../kinode_app_common" }
uuid = "1.3"
serde = { version = "1.0", features = ["derive"] }
kinode_process_lib = { version = "0.10.2", features = ["logging"] }

[lib]
proc-macro = true
